[package]
name = "passwdgen"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A pretty simple tool for password generation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
rand = "0.8.5"